--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Tina's Quiz-App</title>
   </head>
   <body>
-    Hello this is my quiz app
+    <header class="header"><h1>Quiz App</h1></header>
+    <main class="homepage-main">
+      <section class="question-card">Question Card 1</section>
+      <section class="question-card">Question Card 2</section>
+      <section class="question-card">Question Card 3</section>
+    </main>
+    <div>
+    <footer class="footer"><div>Homepage</div>
+    <div>Bookmark</div>
+  <div>Profile</div>
+</div></footer>
   </body>
 </html>
