--- a/index.html
+++ b/index.html
@@ -13,10 +13,33 @@
       <section class="question-card">Question Card 2</section>
       <section class="question-card">Question Card 3</section>
     </main>
-    <div>
-    <footer class="footer"><div>Homepage</div>
-    <div>Bookmark</div>
-  <div>Profile</div>
-</div></footer>
+    <footer class="footer">
+      <div class="nav-bar">
+        <div class="nav-bar-items">
+          <a href="##"
+            ><img
+              src="../resources/resources/home.png"
+              alt="home-btn"
+              class="nav-bar--btn"
+          /></a>
+        </div>
+        <div class="nav-bar-items">
+          <a href="index.html"
+            ><img
+              src="../resources/resources/bookmark_transparent.png"
+              alt="bookmark-btn"
+              class="nav-bar--btn"
+          /></a>
+        </div>
+        <div class="nav-bar-items">
+          <a href="##"
+            ><img
+              src="../resources/resources/profile.png"
+              alt="profile-btn"
+              class="nav-bar--btn"
+          /></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
