build structure of questions cards and added questions

--- a/index.html
+++ b/index.html
@@ -9,9 +9,44 @@
   <body>
     <header class="header"><h1>Quiz App</h1></header>
     <main class="homepage-main">
-      <section class="question-card">Question Card 1</section>
-      <section class="question-card">Question Card 2</section>
-      <section class="question-card">Question Card 3</section>
+      <section class="question-card">
+        What is the capital city of Vietnam?
+      </section>
+      <section class="question-card">
+        Which river is significant in Vietnamese culture and flows through both
+        Hanoi and Ho Chi Minh City?
+      </section>
+      <section class="question-card">
+        What is the traditional Vietnamese noodle soup known for its flavorful
+        broth, rice noodles, and various toppings?
+      </section>
+      <section class="question-card">
+        Which famous historical site in Vietnam served as the political and
+        administrative center of ancient Vietnamese emperors?
+      </section>
+      <section class="question-card">
+        What is the traditional Vietnamese celebration that marks the Lunar New
+        Year and involves various festive activities and special foods?
+      </section>
+      <section class="question-card">
+        Which UNESCO World Heritage site in Vietnam is famous for its stunning
+        limestone karst formations and is a popular destination for boat tours?
+      </section>
+      <section class="question-card">
+        What is the currency used in Vietnam?
+      </section>
+      <section class="question-card">
+        How many Vietnamese Dong transfer to 1€?
+      </section>
+      <section class="question-card">
+        Which Vietnamese dish is a savory pancake made with rice flour, water,
+        and turmeric powder, filled with ingredients like shrimp, bean sprouts,
+        and herbs?
+      </section>
+      <section class="question-card">
+        What does the famous Dragon-Bridge in the city of Da Nang do every
+        night?
+      </section>
     </main>
     <footer class="footer">
       <div class="nav-bar">
