--- a/index.html
+++ b/index.html
@@ -10,42 +10,67 @@
     <header class="header"><h1>Quiz App</h1></header>
     <main class="homepage-main">
       <section class="question-card">
-        What is the capital city of Vietnam?
+        <h2>What is the capital city of Vietnam?</h2>
+        <button>Show Answer</button>
       </section>
       <section class="question-card">
-        Which river is significant in Vietnamese culture and flows through both
-        Hanoi and Ho Chi Minh City?
+        <h2>
+          Which river is significant in Vietnamese culture and flows through
+          both Hanoi and Ho Chi Minh City?
+        </h2>
+        <button>Show Answer</button>
       </section>
       <section class="question-card">
-        What is the traditional Vietnamese noodle soup known for its flavorful
-        broth, rice noodles, and various toppings?
+        <h2>
+          What is the traditional Vietnamese noodle soup known for its flavorful
+          broth, rice noodles, and various toppings?
+        </h2>
+        <button>Show Answer</button>
       </section>
       <section class="question-card">
-        Which famous historical site in Vietnam served as the political and
-        administrative center of ancient Vietnamese emperors?
+        <h2>
+          Which famous historical site in Vietnam served as the political and
+          administrative center of ancient Vietnamese emperors?
+        </h2>
+        <button>Show Answer</button>
       </section>
       <section class="question-card">
-        What is the traditional Vietnamese celebration that marks the Lunar New
-        Year and involves various festive activities and special foods?
+        <h2>
+          What is the traditional Vietnamese celebration that marks the Lunar
+          New Year and involves various festive activities and special foods?
+        </h2>
+        <button>Show Answer</button>
       </section>
       <section class="question-card">
-        Which UNESCO World Heritage site in Vietnam is famous for its stunning
-        limestone karst formations and is a popular destination for boat tours?
+        <h2>
+          Which UNESCO World Heritage site in Vietnam is famous for its stunning
+          limestone karst formations and is a popular destination for boat
+          tours?
+        </h2>
+        <button>Show Answer</button>
       </section>
       <section class="question-card">
-        What is the currency used in Vietnam?
+        <h2>What is the currency used in Vietnam?</h2>
+        <button>Show Answer</button>
       </section>
       <section class="question-card">
-        How many Vietnamese Dong transfer to 1€?
+        <h2>How many Vietnamese Dong transfer to 1€?</h2>
+        <button>Show Answer</button>
       </section>
       <section class="question-card">
-        Which Vietnamese dish is a savory pancake made with rice flour, water,
-        and turmeric powder, filled with ingredients like shrimp, bean sprouts,
-        and herbs?
+        <h2>
+          Which Vietnamese dish is a savory pancake made with rice flour, water,
+          and turmeric powder, filled with ingredients like shrimp, bean
+          sprouts, and herbs?
+        </h2>
+        <button>Show Answer</button>
       </section>
       <section class="question-card">
-        What does the famous Dragon-Bridge in the city of Da Nang do every
-        night?
+        <h2>
+          What does the famous Dragon-Bridge in the city of Da Nang do every
+          night?
+        </h2>
+        <button>Show Answer</button>
       </section>
     </main>
     <footer class="footer">
