add and style tags

--- a/index.html
+++ b/index.html
@@ -11,35 +11,60 @@
     <main class="homepage-main">
       <section class="question-card">
         <h2>What is the capital city of Vietnam?</h2>
-        <button>Show Answer</button>
+        <button class="show-answer">Show Answer</button>
+        <div class="tags">
+          <button class="btn-tags">#tagone</button>
+          <button class="btn-tags">#tagtwo</button>
+          <button class="btn-tags">#tagthree</button>
+        </div>
       </section>
       <section class="question-card">
         <h2>
           Which river is significant in Vietnamese culture and flows through
           both Hanoi and Ho Chi Minh City?
         </h2>
-        <button>Show Answer</button>
+        <button class="show-answer">Show Answer</button>
+        <div class="tags">
+          <button class="btn-tags">#tagone</button>
+          <button class="btn-tags">#tagtwo</button>
+          <button class="btn-tags">#tagthree</button>
+        </div>
       </section>
       <section class="question-card">
         <h2>
           What is the traditional Vietnamese noodle soup known for its flavorful
           broth, rice noodles, and various toppings?
         </h2>
-        <button>Show Answer</button>
+        <button class="show-answer">Show Answer</button>
+        <div class="tags">
+          <button class="btn-tags">#tagone</button>
+          <button class="btn-tags">#tagtwo</button>
+          <button class="btn-tags">#tagthree</button>
+        </div>
       </section>
       <section class="question-card">
         <h2>
           Which famous historical site in Vietnam served as the political and
           administrative center of ancient Vietnamese emperors?
         </h2>
-        <button>Show Answer</button>
+        <button class="show-answer">Show Answer</button>
+        <div class="tags">
+          <button class="btn-tags">#tagone</button>
+          <button class="btn-tags">#tagtwo</button>
+          <button class="btn-tags">#tagthree</button>
+        </div>
       </section>
       <section class="question-card">
         <h2>
           What is the traditional Vietnamese celebration that marks the Lunar
           New Year and involves various festive activities and special foods?
         </h2>
-        <button>Show Answer</button>
+        <button class="show-answer">Show Answer</button>
+        <div class="tags">
+          <button class="btn-tags">#tagone</button>
+          <button class="btn-tags">#tagtwo</button>
+          <button class="btn-tags">#tagthree</button>
+        </div>
       </section>
       <section class="question-card">
         <h2>
@@ -47,15 +72,30 @@
           limestone karst formations and is a popular destination for boat
           tours?
         </h2>
-        <button>Show Answer</button>
+        <button class="show-answer">Show Answer</button>
+        <div class="tags">
+          <button class="btn-tags">#tagone</button>
+          <button class="btn-tags">#tagtwo</button>
+          <button class="btn-tags">#tagthree</button>
+        </div>
       </section>
       <section class="question-card">
         <h2>What is the currency used in Vietnam?</h2>
-        <button>Show Answer</button>
+        <button class="show-answer">Show Answer</button>
+        <div class="tags">
+          <button class="btn-tags">#tagone</button>
+          <button class="btn-tags">#tagtwo</button>
+          <button class="btn-tags">#tagthree</button>
+        </div>
       </section>
       <section class="question-card">
         <h2>How many Vietnamese Dong transfer to 1€?</h2>
-        <button>Show Answer</button>
+        <button class="show-answer">Show Answer</button>
+        <div class="tags">
+          <button class="btn-tags">#tagone</button>
+          <button class="btn-tags">#tagtwo</button>
+          <button class="btn-tags">#tagthree</button>
+        </div>
       </section>
       <section class="question-card">
         <h2>
@@ -63,14 +103,24 @@
           and turmeric powder, filled with ingredients like shrimp, bean
           sprouts, and herbs?
         </h2>
-        <button>Show Answer</button>
+        <button class="show-answer">Show Answer</button>
+        <div class="tags">
+          <button class="btn-tags">#tagone</button>
+          <button class="btn-tags">#tagtwo</button>
+          <button class="btn-tags">#tagthree</button>
+        </div>
       </section>
       <section class="question-card">
         <h2>
           What does the famous Dragon-Bridge in the city of Da Nang do every
           night?
         </h2>
-        <button>Show Answer</button>
+        <button class="show-answer">Show Answer</button>
+        <div class="tags">
+          <button class="btn-tags">#tagone</button>
+          <button class="btn-tags">#tagtwo</button>
+          <button class="btn-tags">#tagthree</button>
+        </div>
       </section>
     </main>
     <footer class="footer">
