--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <header class="header"><h1>Quiz App</h1></header>
     <main class="homepage-main">
       <section class="question-card">
+        <img
+          src="../resources/resources/bookmark.png"
+          alt="icon of a bookmark"
+          class="bookmark"
+        />
         <h2>What is the capital city of Vietnam?</h2>
         <button class="show-answer">Show Answer</button>
         <div class="tags">
@@ -19,6 +24,11 @@
         </div>
       </section>
       <section class="question-card">
+        <img
+          src="../resources/resources/bookmark.png"
+          alt="icon of a bookmark"
+          class="bookmark"
+        />
         <h2>
           Which river is significant in Vietnamese culture and flows through
           both Hanoi and Ho Chi Minh City?
@@ -31,6 +41,11 @@
         </div>
       </section>
       <section class="question-card">
+        <img
+          src="../resources/resources/bookmark.png"
+          alt="icon of a bookmark"
+          class="bookmark"
+        />
         <h2>
           What is the traditional Vietnamese noodle soup known for its flavorful
           broth, rice noodles, and various toppings?
@@ -43,6 +58,11 @@
         </div>
       </section>
       <section class="question-card">
+        <img
+          src="../resources/resources/bookmark.png"
+          alt="icon of a bookmark"
+          class="bookmark"
+        />
         <h2>
           Which famous historical site in Vietnam served as the political and
           administrative center of ancient Vietnamese emperors?
@@ -55,6 +75,11 @@
         </div>
       </section>
       <section class="question-card">
+        <img
+          src="../resources/resources/bookmark.png"
+          alt="icon of a bookmark"
+          class="bookmark"
+        />
         <h2>
           What is the traditional Vietnamese celebration that marks the Lunar
           New Year and involves various festive activities and special foods?
@@ -67,6 +92,11 @@
         </div>
       </section>
       <section class="question-card">
+        <img
+          src="../resources/resources/bookmark.png"
+          alt="icon of a bookmark"
+          class="bookmark"
+        />
         <h2>
           Which UNESCO World Heritage site in Vietnam is famous for its stunning
           limestone karst formations and is a popular destination for boat
@@ -80,6 +110,11 @@
         </div>
       </section>
       <section class="question-card">
+        <img
+          src="../resources/resources/bookmark.png"
+          alt="icon of a bookmark"
+          class="bookmark"
+        />
         <h2>What is the currency used in Vietnam?</h2>
         <button class="show-answer">Show Answer</button>
         <div class="tags">
@@ -89,6 +124,11 @@
         </div>
       </section>
       <section class="question-card">
+        <img
+          src="../resources/resources/bookmark.png"
+          alt="icon of a bookmark"
+          class="bookmark"
+        />
         <h2>How many Vietnamese Dong transfer to 1€?</h2>
         <button class="show-answer">Show Answer</button>
         <div class="tags">
@@ -98,6 +138,11 @@
         </div>
       </section>
       <section class="question-card">
+        <img
+          src="../resources/resources/bookmark.png"
+          alt="icon of a bookmark"
+          class="bookmark"
+        />
         <h2>
           Which Vietnamese dish is a savory pancake made with rice flour, water,
           and turmeric powder, filled with ingredients like shrimp, bean
@@ -111,6 +156,11 @@
         </div>
       </section>
       <section class="question-card">
+        <img
+          src="../resources/resources/bookmark.png"
+          alt="icon of a bookmark"
+          class="bookmark"
+        />
         <h2>
           What does the famous Dragon-Bridge in the city of Da Nang do every
           night?
