edit bookmarks html and small touch ups

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/style.css" />
-    <title>Tina's Quiz-App</title>
+    <title>Homepage | Vietnam-Quiz</title>
   </head>
   <body>
-    <header class="header"><h1>Quiz App</h1></header>
+    <header class="header"><h1>Homepage | Vietnam-Quiz</h1></header>
     <main class="homepage-main">
       <section class="question-card">
         <img
@@ -176,26 +176,26 @@
     <footer class="footer">
       <div class="nav-bar">
         <div class="nav-bar-items">
-          <a href="##"
+          <a href="../index.html"
             ><img
-              src="../resources/resources/home.png"
-              alt="home-btn"
+              src="../resources/resources/home_filled.png"
+              alt="icon for the home-button"
               class="nav-bar--btn"
           /></a>
         </div>
         <div class="nav-bar-items">
-          <a href="index.html"
+          <a href="../bookmarks.html"
             ><img
               src="../resources/resources/bookmark_transparent.png"
-              alt="bookmark-btn"
+              alt="icon for the bookmark-button"
               class="nav-bar--btn"
           /></a>
         </div>
         <div class="nav-bar-items">
-          <a href="##"
+          <a href="../profile.html"
             ><img
               src="../resources/resources/profile.png"
-              alt="profile-btn"
+              alt="icon for the profile-button"
               class="nav-bar--btn"
           /></a>
         </div>
