touch up index and bookmark html

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -15,26 +15,12 @@
           alt="icon of a bookmark"
           class="bookmark"
         />
-        <h2>What is the capital city of Vietnam?</h2>
-        <button class="show-answer">Show Answer</button>
-        <div class="tags">
-          <button class="btn-tags">#tagone</button>
-          <button class="btn-tags">#tagtwo</button>
-          <button class="btn-tags">#tagthree</button>
-        </div>
-      </section>
-
-      <section class="question-card">
-        <img
-          src="../resources/resources/bookmark_filled.png"
-          alt="icon of a bookmark"
-          class="bookmark"
-        />
         <h2>
-          Which famous historical site in Vietnam served as the political and
-          administrative center of ancient Vietnamese emperors?
+          Which river is significant in Vietnamese culture and flows through
+          both Hanoi and Ho Chi Minh City?
         </h2>
         <button class="show-answer">Show Answer</button>
+        <h3>The Red River (Sông Hồng).</h3>
         <div class="tags">
           <button class="btn-tags">#tagone</button>
           <button class="btn-tags">#tagtwo</button>
@@ -52,13 +38,13 @@
           New Year and involves various festive activities and special foods?
         </h2>
         <button class="show-answer">Show Answer</button>
+        <h3>Tet Nguyen Dan (or short "Tet").</h3>
         <div class="tags">
           <button class="btn-tags">#tagone</button>
           <button class="btn-tags">#tagtwo</button>
           <button class="btn-tags">#tagthree</button>
         </div>
       </section>
-
       <section class="question-card">
         <img
           src="../resources/resources/bookmark_filled.png"
@@ -67,13 +53,13 @@
         />
         <h2>What is the currency used in Vietnam?</h2>
         <button class="show-answer">Show Answer</button>
+        <h3>Vietnamese Dong (VND)</h3>
         <div class="tags">
           <button class="btn-tags">#tagone</button>
           <button class="btn-tags">#tagtwo</button>
           <button class="btn-tags">#tagthree</button>
         </div>
       </section>
-
       <section class="question-card">
         <img
           src="../resources/resources/bookmark_filled.png"
@@ -85,6 +71,7 @@
           night?
         </h2>
         <button class="show-answer">Show Answer</button>
+        <h3>spit water and fire</h3>
         <div class="tags">
           <button class="btn-tags">#tagone</button>
           <button class="btn-tags">#tagtwo</button>
