--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         />
         <h2>What is the capital city of Vietnam?</h2>
         <button class="show-answer">Show Answer</button>
+        <h3>Hanoi</h3>
         <div class="tags">
           <button class="btn-tags">#tagone</button>
           <button class="btn-tags">#tagtwo</button>
@@ -34,6 +35,7 @@
           both Hanoi and Ho Chi Minh City?
         </h2>
         <button class="show-answer">Show Answer</button>
+        <h3>The Red River (Sông Hồng).</h3>
         <div class="tags">
           <button class="btn-tags">#tagone</button>
           <button class="btn-tags">#tagtwo</button>
@@ -51,6 +53,7 @@
           broth, rice noodles, and various toppings?
         </h2>
         <button class="show-answer">Show Answer</button>
+        <h3>Pho</h3>
         <div class="tags">
           <button class="btn-tags">#tagone</button>
           <button class="btn-tags">#tagtwo</button>
@@ -68,6 +71,7 @@
           administrative center of ancient Vietnamese emperors?
         </h2>
         <button class="show-answer">Show Answer</button>
+        <h3>The Imperial City of Hue.</h3>
         <div class="tags">
           <button class="btn-tags">#tagone</button>
           <button class="btn-tags">#tagtwo</button>
@@ -85,6 +89,7 @@
           New Year and involves various festive activities and special foods?
         </h2>
         <button class="show-answer">Show Answer</button>
+        <h3>Tet Nguyen Dan (or short "Tet").</h3>
         <div class="tags">
           <button class="btn-tags">#tagone</button>
           <button class="btn-tags">#tagtwo</button>
@@ -103,6 +108,7 @@
           tours?
         </h2>
         <button class="show-answer">Show Answer</button>
+        <h3>Ha Long Bay</h3>
         <div class="tags">
           <button class="btn-tags">#tagone</button>
           <button class="btn-tags">#tagtwo</button>
@@ -117,6 +123,7 @@
         />
         <h2>What is the currency used in Vietnam?</h2>
         <button class="show-answer">Show Answer</button>
+        <h3>Vietnamese Dong (VND)</h3>
         <div class="tags">
           <button class="btn-tags">#tagone</button>
           <button class="btn-tags">#tagtwo</button>
@@ -131,6 +138,7 @@
         />
         <h2>How many Vietnamese Dong transfer to 1€?</h2>
         <button class="show-answer">Show Answer</button>
+        <h3>about 25.000 VND</h3>
         <div class="tags">
           <button class="btn-tags">#tagone</button>
           <button class="btn-tags">#tagtwo</button>
@@ -149,6 +157,7 @@
           sprouts, and herbs?
         </h2>
         <button class="show-answer">Show Answer</button>
+        <h3>Banh Xeo</h3>
         <div class="tags">
           <button class="btn-tags">#tagone</button>
           <button class="btn-tags">#tagtwo</button>
@@ -166,6 +175,7 @@
           night?
         </h2>
         <button class="show-answer">Show Answer</button>
+        <h3>spit water and fire</h3>
         <div class="tags">
           <button class="btn-tags">#tagone</button>
           <button class="btn-tags">#tagtwo</button>
