edit profile html

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="header"><h1>Bookmarks | Vietnam-Quiz</h1></header>
-    <main class="homepage-main">
+    <main class="bookmarks-main">
       <section class="question-card">
         <img
           src="../resources/resources/bookmark_filled.png"
