--- a/bookmarks.html
+++ b/bookmarks.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="/tina-quiz-app/css/style.css" />
     <title>Bookmarks | Vietname - Quiz</title>
   </head>
   <body>
@@ -11,7 +11,7 @@
     <main class="homepage-main">
       <section class="question-card">
         <img
-          src="../resources/resources/bookmark_filled.png"
+          src="/tina-quiz-a/tina-quiz-app/resources/resources/bookmark_filled.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -29,7 +29,7 @@
       </section>
       <section class="question-card">
         <img
-          src="../resources/resources/bookmark_filled.png"
+          src="/tina-quiz-app/resources/resources/bookmark_filled.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -47,7 +47,7 @@
       </section>
       <section class="question-card">
         <img
-          src="../resources/resources/bookmark_filled.png"
+          src="/tina-quiz-app/resources/resources/bookmark_filled.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -62,7 +62,7 @@
       </section>
       <section class="question-card">
         <img
-          src="../resources/resources/bookmark_filled.png"
+          src="/tina-quiz-app/resources/resources/bookmark_filled.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -82,25 +82,25 @@
     <footer class="footer">
       <div class="nav-bar">
         <div class="nav-bar-items">
-          <a href="../index.html"
+          <a href="/tina-quiz-app/index.html"
             ><img
-              src="../resources/resources/home.png"
+              src="/tina-quiz-app/resources/resources/home.png"
               alt="icon of the home-button"
               class="nav-bar--btn"
           /></a>
         </div>
         <div class="nav-bar-items">
-          <a href="../bookmarks.html"
+          <a href="/tina-quiz-app/bookmarks.html"
             ><img
-              src="../resources/resources/bookmark_filled.png"
+              src="/tina-quiz-app/resources/resources/bookmark_filled.png"
               alt="icon of the bookmark-button"
               class="nav-bar--btn"
           /></a>
         </div>
         <div class="nav-bar-items">
-          <a href="../profile.html"
+          <a href="/tina-quiz-app/profile.html"
             ><img
-              src="../resources/resources/profile.png"
+              src="/tina-quiz-app/resources/resources/profile.png"
               alt="icon of the profile-button"
               class="nav-bar--btn"
           /></a>
