--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="/tina-quiz-app/css/style.css" />
     <title>Profile | Vietname - Quiz</title>
   </head>
   <body>
@@ -11,7 +11,7 @@
     <main class="profile-main">
       <section class="intro-section">
         <img
-          src="../resources/resources/profile.png"
+          src="/tina-quiz-app/resources/resources/profile.png"
           alt="icon of person"
           class="profile-pic"
         />
@@ -65,25 +65,25 @@
     <footer class="footer">
       <div class="nav-bar">
         <div class="nav-bar-items">
-          <a href="../index.html"
+          <a href="/tina-quiz-app/index.html"
             ><img
-              src="../resources/resources/home.png"
+              src="/tina-quiz-app/resources/resources/home.png"
               alt="icon of the home-button"
               class="nav-bar--btn"
           /></a>
         </div>
         <div class="nav-bar-items">
-          <a href="../bookmarks.html"
+          <a href="/tina-quiz-app/bookmarks.html"
             ><img
-              src="../resources/resources/bookmark_transparent.png"
+              src="/tina-quiz-app/resources/resources/bookmark_transparent.png"
               alt="icon of the bookmark-button"
               class="nav-bar--btn"
           /></a>
         </div>
         <div class="nav-bar-items">
-          <a href="../profile.html"
+          <a href="/tina-quiz-app/profile.html"
             ><img
-              src="../resources/resources/profile_filled.png"
+              src="/tina-quiz-app/resources/resources/profile_filled.png"
               alt="icon of the profile-button"
               class="nav-bar--btn"
           /></a>
