fix css ref on bookmark html

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -11,7 +11,7 @@
     <main class="homepage-main">
       <section class="question-card">
         <img
-          src="/tina-quiz-a/tina-quiz-app/resources/resources/bookmark_filled.png"
+          src="/tina-quiz-app/resources/resources/bookmark_filled.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -61,11 +61,8 @@
         </div>
       </section>
       <section class="question-card">
-        <img
-          src="/tina-quiz-app/resources/resources/bookmark_filled.png"
-          alt="icon of a bookmark"
-          class="bookmark"
-        />
+        <img src=/tina-quiz-app/resources/resources/bookmark_filled.png"
+        alt="icon of a bookmark" class="bookmark" />
         <h2>
           What does the famous Dragon-Bridge in the city of Da Nang do every
           night?
@@ -82,25 +79,25 @@
     <footer class="footer">
       <div class="nav-bar">
         <div class="nav-bar-items">
-          <a href="/tina-quiz-app/index.html"
+          <a href="../index.html"
             ><img
-              src="/tina-quiz-app/resources/resources/home.png"
+              src="../resources/resources/home.png"
               alt="icon of the home-button"
               class="nav-bar--btn"
           /></a>
         </div>
         <div class="nav-bar-items">
-          <a href="/tina-quiz-app/bookmarks.html"
+          <a href="../bookmarks.html"
             ><img
-              src="/tina-quiz-app/resources/resources/bookmark_filled.png"
+              src="../resources/resources/bookmark_filled.png"
               alt="icon of the bookmark-button"
               class="nav-bar--btn"
           /></a>
         </div>
         <div class="nav-bar-items">
-          <a href="/tina-quiz-app/profile.html"
+          <a href="../profile.html"
             ><img
-              src="/tina-quiz-app/resources/resources/profile.png"
+              src="../resources/resources/profile.png"
               alt="icon of the profile-button"
               class="nav-bar--btn"
           /></a>
