--- a/profile.html
+++ b/profile.html
@@ -27,22 +27,12 @@
           laborum odio soluta?
         </p>
       </section>
-      <!-- 
-      <section class="question-card">
-        <img
-          src="../resources/resources/bookmark_filled.png"
-          alt="icon of a bookmark"
-          class="bookmark"
-        />
-        <h2>What is the currency used in Vietnam?</h2>
-        <button class="show-answer">Show Answer</button>
-        <h3>Vietnamese Dong (VND)</h3>
-        <div class="tags">
-          <button class="btn-tags">#tagone</button>
-          <button class="btn-tags">#tagtwo</button>
-          <button class="btn-tags">#tagthree</button>
-        </div>
+
+      <section class="counter-section">
+        <div class="counter-created-questions"></div>
+        <div class="counter-bookmarks"></div>
       </section>
+      <!-- 
       <section class="question-card">
         <img
           src="../resources/resources/bookmark_filled.png"
