--- a/bookmarks.html
+++ b/bookmarks.html
@@ -79,25 +79,25 @@
     <footer class="footer">
       <div class="nav-bar">
         <div class="nav-bar-items">
-          <a href="../index.html"
+          <a href="/tina-quiz-app/index.html"
             ><img
-              src="../resources/resources/home.png"
+              src="/tina-quiz-app/resources/resources/home.png"
               alt="icon of the home-button"
               class="nav-bar--btn"
           /></a>
         </div>
         <div class="nav-bar-items">
-          <a href="../bookmarks.html"
+          <a href="/tina-quiz-app/bookmarks.html"
             ><img
-              src="../resources/resources/bookmark_filled.png"
+              src="/tina-quiz-app/resources/resources/bookmark_filled.png"
               alt="icon of the bookmark-button"
               class="nav-bar--btn"
           /></a>
         </div>
         <div class="nav-bar-items">
-          <a href="../profile.html"
+          <a href="/tina-quiz-app/profile.html"
             ><img
-              src="../resources/resources/profile.png"
+              src="/tina-quiz-app/resources/resources/profile.png"
               alt="icon of the profile-button"
               class="nav-bar--btn"
           /></a>
