edit profile page

--- a/profile.html
+++ b/profile.html
@@ -29,8 +29,15 @@
       </section>
 
       <section class="counter-section">
-        <div class="counter-created-questions"></div>
-        <div class="counter-bookmarks"></div>
+        <div class="counter-created-questions">
+          <img src="/tina-quiz-app/resources/resources/questions.png" alt="" />
+        </div>
+        <div class="counter-bookmarks">
+          <img
+            src="/tina-quiz-app/resources/resources/bookmark_filled.png"
+            alt=""
+          />
+        </div>
       </section>
       <!-- 
       <section class="question-card">
