add counters to profile

--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/tina-quiz-app/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Profile | Vietname - Quiz</title>
   </head>
   <body>
@@ -29,8 +29,27 @@
       </section>
 
       <section class="counter-section">
-        <div class="counter-created-questions"></div>
-        <div class="counter-bookmarks"></div>
+        <div class="counter-section-elements">
+          <img
+            src="../resources/resources/question.png"
+            alt="icon for created questions"
+            class="counter-created-questions-icon"
+          />
+          <h2 class="counter-number">23</h2>
+        </div>
+        <div class="counter-section-elements">
+          <img
+            src="../resources/resources/bookmark_filled.png"
+            alt="icon for bookmarks"
+            class="counter-bookmarks-icon"
+          />
+          <h2 class="counter-number">11</h2>
+        </div>
+      </section>
+
+      <section class="settings-section">
+        <h2 class="about-me-heading">About me</h2>
+        <h2 class="about-me-heading">About me</h2>
       </section>
       <!-- 
       <section class="question-card">
