--- a/profile.html
+++ b/profile.html
@@ -48,8 +48,8 @@
       </section>
 
       <section class="settings-section">
-        <h2 class="about-me-heading">About me</h2>
-        <h2 class="about-me-heading">About me</h2>
+        <h2 class="about-me-heading">Settings</h2>
+        <h3 class="settings--dark-mode">Dark Mode</h3>
       </section>
       <!-- 
       <section class="question-card">
