--- a/profile.html
+++ b/profile.html
@@ -49,27 +49,15 @@
 
       <section class="settings-section">
         <h2 class="about-me-heading">Settings</h2>
-        <h3 class="settings--dark-mode">Dark Mode</h3>
-      </section>
-      <!-- 
-      <section class="question-card">
-        <img
-          src="../resources/resources/bookmark_filled.png"
-          alt="icon of a bookmark"
-          class="bookmark"
-        />
-        <h2>
-          What does the famous Dragon-Bridge in the city of Da Nang do every
-          night?
-        </h2>
-        <button class="show-answer">Show Answer</button>
-        <h3>spit water and fire</h3>
-        <div class="tags">
-          <button class="btn-tags">#tagone</button>
-          <button class="btn-tags">#tagtwo</button>
-          <button class="btn-tags">#tagthree</button>
+        <div class="settings--dark-mode">
+          <h3 class="settings--dark-mode-heading">Dark Mode</h3>
+
+          <label class="switch">
+            <input type="checkbox" />
+            <span class="slider" round”></span>
+          </label>
         </div>
-      </section> -->
+      </section>
     </main>
     <footer class="footer">
       <div class="nav-bar">
