--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="/tina-quiz-app/css/style.css" />
     <title>Profile | Vietname - Quiz</title>
   </head>
   <body>
@@ -29,10 +29,9 @@
       </section>
 
       <section class="counter-section">
-
         <div class="counter-section-elements">
           <img
-            src="../resources/resources/question.png"
+            src="/tina-quiz-app/resources/resources/question.png"
             alt="icon for created questions"
             class="counter-created-questions-icon"
           />
@@ -40,7 +39,7 @@
         </div>
         <div class="counter-section-elements">
           <img
-            src="../resources/resources/bookmark_filled.png"
+            src="/tina-quiz-app/resources/resources/bookmark_filled.png"
             alt="icon for bookmarks"
             class="counter-bookmarks-icon"
           />
