--- a/bookmarks.html
+++ b/bookmarks.html
@@ -61,8 +61,11 @@
         </div>
       </section>
       <section class="question-card">
-        <img src=/tina-quiz-app/resources/resources/bookmark_filled.png"
-        alt="icon of a bookmark" class="bookmark" />
+        <img
+          src="/tina-quiz-app/resources/resources/bookmark_filled.png"
+          alt="icon of a bookmark"
+          class="bookmark"
+        />
         <h2>
           What does the famous Dragon-Bridge in the city of Da Nang do every
           night?
