fix css refs again

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/tina-quiz-app/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Homepage | Vietnam-Quiz</title>
   </head>
   <body>
@@ -11,7 +11,7 @@
     <main class="homepage-main">
       <section class="question-card">
         <img
-          src="/tina-quiz-app/resources/resources/bookmark.png"
+          src="./resources/resources/bookmark.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -26,7 +26,7 @@
       </section>
       <section class="question-card">
         <img
-          src="/tina-quiz-app/resources/resources/bookmark.png"
+          src="./resources/resources/bookmark.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -44,7 +44,7 @@
       </section>
       <section class="question-card">
         <img
-          src="/tina-quiz-app/resources/resources/bookmark.png"
+          src="./resources/resources/bookmark.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -62,7 +62,7 @@
       </section>
       <section class="question-card">
         <img
-          src="/tina-quiz-app/resources/resources/bookmark.png"
+          src="./resources/resources/bookmark.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -80,7 +80,7 @@
       </section>
       <section class="question-card">
         <img
-          src="/tina-quiz-app/resources/resources/bookmark.png"
+          src="./resources/resources/bookmark.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -98,7 +98,7 @@
       </section>
       <section class="question-card">
         <img
-          src="/tina-quiz-app/resources/resources/bookmark.png"
+          src="./resources/resources/bookmark.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -117,7 +117,7 @@
       </section>
       <section class="question-card">
         <img
-          src="/tina-quiz-app/resources/resources/bookmark.png"
+          src="./resources/resources/bookmark.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -132,7 +132,7 @@
       </section>
       <section class="question-card">
         <img
-          src="/tina-quiz-app/resources/resources/bookmark.png"
+          src="./resources/resources/bookmark.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -147,7 +147,7 @@
       </section>
       <section class="question-card">
         <img
-          src="/tina-quiz-app/resources/resources/bookmark.png"
+          src="./resources/resources/bookmark.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -166,7 +166,7 @@
       </section>
       <section class="question-card">
         <img
-          src="/tina-quiz-app/resources/resources/bookmark.png"
+          src="./resources/resources/bookmark.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -186,25 +186,25 @@
     <footer class="footer">
       <div class="nav-bar">
         <div class="nav-bar-items">
-          <a href="/tina-quiz-app/index.html"
+          <a href="./index.html"
             ><img
-              src="/tina-quiz-app/resources/resources/home_filled.png"
+              src="./resources/resources/home_filled.png"
               alt="icon for the home-button"
               class="nav-bar--btn"
           /></a>
         </div>
         <div class="nav-bar-items">
-          <a href="/tina-quiz-app/bookmarks.html"
+          <a href="./bookmarks.html"
             ><img
-              src="/tina-quiz-app/resources/resources/bookmark_transparent.png"
+              src="./resources/resources/bookmark_transparent.png"
               alt="icon for the bookmark-button"
               class="nav-bar--btn"
           /></a>
         </div>
         <div class="nav-bar-items">
-          <a href="/tina-quiz-app/profile.html"
+          <a href="./profile.html"
             ><img
-              src="/tina-quiz-app/resources/resources/profile.png"
+              src="./resources/resources/profile.png"
               alt="icon for the profile-button"
               class="nav-bar--btn"
           /></a>
