--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main class="homepage-main">
       <section class="question-card">
         <img
-          src="./resources/resources/bookmark.png"
+          src="./resources/bookmark.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -26,7 +26,7 @@
       </section>
       <section class="question-card">
         <img
-          src="./resources/resources/bookmark.png"
+          src="./resources/bookmark.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -44,7 +44,7 @@
       </section>
       <section class="question-card">
         <img
-          src="./resources/resources/bookmark.png"
+          src="./resources/bookmark.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -62,7 +62,7 @@
       </section>
       <section class="question-card">
         <img
-          src="./resources/resources/bookmark.png"
+          src="./resources/bookmark.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -80,7 +80,7 @@
       </section>
       <section class="question-card">
         <img
-          src="./resources/resources/bookmark.png"
+          src="./resources/bookmark.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -98,7 +98,7 @@
       </section>
       <section class="question-card">
         <img
-          src="./resources/resources/bookmark.png"
+          src="./resources/bookmark.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -117,7 +117,7 @@
       </section>
       <section class="question-card">
         <img
-          src="./resources/resources/bookmark.png"
+          src="./resources/bookmark.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -132,7 +132,7 @@
       </section>
       <section class="question-card">
         <img
-          src="./resources/resources/bookmark.png"
+          src="./resources/bookmark.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -147,7 +147,7 @@
       </section>
       <section class="question-card">
         <img
-          src="./resources/resources/bookmark.png"
+          src="./resources/bookmark.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -166,7 +166,7 @@
       </section>
       <section class="question-card">
         <img
-          src="./resources/resources/bookmark.png"
+          src="./resources/bookmark.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -188,7 +188,7 @@
         <div class="nav-bar-items">
           <a href="./index.html"
             ><img
-              src="./resources/resources/home_filled.png"
+              src="./resources/home_filled.png"
               alt="icon for the home-button"
               class="nav-bar--btn"
           /></a>
@@ -196,7 +196,7 @@
         <div class="nav-bar-items">
           <a href="./bookmarks.html"
             ><img
-              src="./resources/resources/bookmark_transparent.png"
+              src="./resources/bookmark_transparent.png"
               alt="icon for the bookmark-button"
               class="nav-bar--btn"
           /></a>
@@ -204,7 +204,7 @@
         <div class="nav-bar-items">
           <a href="./profile.html"
             ><img
-              src="./resources/resources/profile.png"
+              src="./resources/profile.png"
               alt="icon for the profile-button"
               class="nav-bar--btn"
           /></a>
