--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,7 @@
     <main class="profile-main">
       <section class="intro-section">
         <img
-          src="./resources/resources/profile.png"
+          src="./resources/profile.png"
           alt="icon of person"
           class="profile-pic"
         />
@@ -31,7 +31,7 @@
       <section class="counter-section">
         <div class="counter-section-elements">
           <img
-            src="./resources/resources/question.png"
+            src="./resources/question.png"
             alt="icon for created questions"
             class="counter-created-questions-icon"
           />
@@ -39,7 +39,7 @@
         </div>
         <div class="counter-section-elements">
           <img
-            src="./resources/resources/bookmark_filled.png"
+            src="./resources/bookmark_filled.png"
             alt="icon for bookmarks"
             class="counter-bookmarks-icon"
           />
@@ -64,7 +64,7 @@
         <div class="nav-bar-items">
           <a href="./index.html"
             ><img
-              src="./resources/resources/home.png"
+              src="./resources/home.png"
               alt="icon of the home-button"
               class="nav-bar--btn"
           /></a>
@@ -72,7 +72,7 @@
         <div class="nav-bar-items">
           <a href="./bookmarks.html"
             ><img
-              src="./resources/resources/bookmark_transparent.png"
+              src="./resources/bookmark_transparent.png"
               alt="icon of the bookmark-button"
               class="nav-bar--btn"
           /></a>
@@ -80,7 +80,7 @@
         <div class="nav-bar-items">
           <a href="./profile.html"
             ><img
-              src="./resources/resources/profile_filled.png"
+              src="./resources/profile_filled.png"
               alt="icon of the profile-button"
               class="nav-bar--btn"
           /></a>
