--- a/bookmarks.html
+++ b/bookmarks.html
@@ -11,7 +11,7 @@
     <main class="bookmarks-main">
       <section class="question-card">
         <img
-          src="./resources/resources/bookmark_filled.png"
+          src="./resources/bookmark_filled.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -29,7 +29,7 @@
       </section>
       <section class="question-card">
         <img
-          src="./resources/resources/bookmark_filled.png"
+          src="./resources/bookmark_filled.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -47,7 +47,7 @@
       </section>
       <section class="question-card">
         <img
-          src="./resources/resources/bookmark_filled.png"
+          src="./resources/bookmark_filled.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -62,7 +62,7 @@
       </section>
       <section class="question-card">
         <img
-          src="./resources/resources/bookmark_filled.png"
+          src="./resources/bookmark_filled.png"
           alt="icon of a bookmark"
           class="bookmark"
         />
@@ -84,7 +84,7 @@
         <div class="nav-bar-items">
           <a href="./index.html"
             ><img
-              src="./resources/resources/home.png"
+              src="./resources/home.png"
               alt="icon of the home-button"
               class="nav-bar--btn"
           /></a>
@@ -92,7 +92,7 @@
         <div class="nav-bar-items">
           <a href="./bookmarks.html"
             ><img
-              src="./resources/resources/bookmark_filled.png"
+              src="./resources/bookmark_filled.png"
               alt="icon of the bookmark-button"
               class="nav-bar--btn"
           /></a>
@@ -100,7 +100,7 @@
         <div class="nav-bar-items">
           <a href="./profile.html"
             ><img
-              src="./resources/resources/profile.png"
+              src="./resources/profile.png"
               alt="icon of the profile-button"
               class="nav-bar--btn"
           /></a>
