--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           src="./resources/bookmark.png"
           alt="icon of a bookmark"
           class="bookmark"
+          data-js="bookmark-button"
         />
         <h2>What is the capital city of Vietnam?</h2>
         <button class="show-answer">Show Answer</button>
@@ -211,5 +212,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/index.js"></script>
   </body>
 </html>
