make answers appear or disappear by click show answer button

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
           data-js="bookmark-button"
         />
         <h2>What is the capital city of Vietnam?</h2>
-        <button class="show-answer">Show Answer</button>
-        <h3>Hanoi</h3>
+        <button class="show-answer" data-js="show-answer-button">
+          Show Answer
+        </button>
+        <h3 data-js="answer">Hanoi</h3>
         <div class="tags">
           <button class="btn-tags">#tagone</button>
           <button class="btn-tags">#tagtwo</button>
