add button to forms page on all existing html

--- a/index.html
+++ b/index.html
@@ -205,6 +205,14 @@
           /></a>
         </div>
         <div class="nav-bar-items">
+          <a href="./form.html"
+            ><img
+              src="./resources/add.png"
+              alt="icon for the add-button"
+              class="nav-bar--btn"
+          /></a>
+        </div>
+        <div class="nav-bar-items">
           <a href="./profile.html"
             ><img
               src="./resources/profile.png"
