--- a/form.html
+++ b/form.html
@@ -3,7 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+
     <title>Bookmarks | Vietname - Quiz</title>
   </head>
-  <body></body>
+  <body>
+    <footer class="footer">
+      <div class="nav-bar">
+        <div class="nav-bar-items">
+          <a href="./index.html"
+            ><img
+              src="./resources/home.png"
+              alt="icon for the home-button"
+              class="nav-bar--btn"
+          /></a>
+        </div>
+        <div class="nav-bar-items">
+          <a href="./bookmarks.html"
+            ><img
+              src="./resources/bookmark_transparent.png"
+              alt="icon for the bookmark-button"
+              class="nav-bar--btn"
+          /></a>
+        </div>
+        <div class="nav-bar-items">
+          <a href="./form.html"
+            ><img
+              src="./resources/add_filled.png"
+              alt="icon for the add-button"
+              class="nav-bar--btn"
+          /></a>
+        </div>
+        <div class="nav-bar-items">
+          <a href="./profile.html"
+            ><img
+              src="./resources/profile.png"
+              alt="icon for the profile-button"
+              class="nav-bar--btn"
+          /></a>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
