add header to forms page

--- a/form.html
+++ b/form.html
@@ -8,6 +8,7 @@
     <title>Bookmarks | Vietname - Quiz</title>
   </head>
   <body>
+    <header class="header"><h1>Add Questions | Vietnam-Quiz</h1></header>
     <footer class="footer">
       <div class="nav-bar">
         <div class="nav-bar-items">
