add form and form fields

--- a/form.html
+++ b/form.html
@@ -9,6 +9,23 @@
   </head>
   <body>
     <header class="header"><h1>Add Questions | Vietnam-Quiz</h1></header>
+    <main>
+      <form action="">
+        <textarea
+          name="your-question"
+          id="your-question"
+          cols="30"
+          rows="10"
+        ></textarea>
+        <textarea
+          name="your-answer"
+          id="your-answer"
+          cols="30"
+          rows="10"
+        ></textarea>
+        <input type="text" />
+      </form>
+    </main>
     <footer class="footer">
       <div class="nav-bar">
         <div class="nav-bar-items">
