add labels to form fields

--- a/form.html
+++ b/form.html
@@ -11,19 +11,22 @@
     <header class="header"><h1>Add Questions | Vietnam-Quiz</h1></header>
     <main>
       <form action="">
+        <label for="your-question">Your question about Vietnam</label>
         <textarea
           name="your-question"
           id="your-question"
           cols="30"
           rows="10"
         ></textarea>
+        <label for="your-answer">Your answer</label>
         <textarea
           name="your-answer"
           id="your-answer"
           cols="30"
           rows="10"
         ></textarea>
-        <input type="text" />
+        <label for="your-tag">Your tag</label>
+        <input type="text" name="your-tag" />
       </form>
     </main>
     <footer class="footer">
