add line breaks to form

--- a/form.html
+++ b/form.html
@@ -9,23 +9,25 @@
   </head>
   <body>
     <header class="header"><h1>Add Questions | Vietnam-Quiz</h1></header>
-    <main>
+    <main class="form-main">
       <form action="">
-        <label for="your-question">Your question about Vietnam</label>
+        <label for="your-question">Your question about Vietnam</label><br />
         <textarea
           name="your-question"
           id="your-question"
           cols="30"
           rows="10"
-        ></textarea>
-        <label for="your-answer">Your answer</label>
+        ></textarea
+        ><br />
+        <label for="your-answer">Your answer</label><br />
         <textarea
           name="your-answer"
           id="your-answer"
           cols="30"
           rows="10"
-        ></textarea>
-        <label for="your-tag">Your tag</label>
+        ></textarea
+        ><br />
+        <label for="your-tag">Your tag</label><br />
         <input type="text" name="your-tag" />
       </form>
     </main>
