--- a/form.html
+++ b/form.html
@@ -10,25 +10,24 @@
   <body>
     <header class="header"><h1>Add Questions | Vietnam-Quiz</h1></header>
     <main class="form-main">
-      <form action="">
-        <label for="your-question">Your question about Vietnam</label><br />
+      <form action="" class="form">
+        <label for="your-question">Your question about Vietnam</label>
         <textarea
           name="your-question"
           id="your-question"
-          cols="30"
+          cols="50"
           rows="10"
-        ></textarea
-        ><br />
-        <label for="your-answer">Your answer</label><br />
+        ></textarea>
+        <label for="your-answer">Your answer</label>
         <textarea
           name="your-answer"
           id="your-answer"
-          cols="30"
+          cols="50"
           rows="10"
-        ></textarea
-        ><br />
-        <label for="your-tag">Your tag</label><br />
+        ></textarea>
+        <label for="your-tag">Your tag</label>
         <input type="text" name="your-tag" />
+        <button type="submit">Submit</button>
       </form>
     </main>
     <footer class="footer">
