fix some errors overall

--- a/form.html
+++ b/form.html
@@ -25,7 +25,7 @@
           cols="50"
           rows="10"
         ></textarea>
-        <label for="your-tag">Your tag</label>
+        <label for="your-tag">Your tag(s)</label>
         <input type="text" name="your-tag" />
         <button type="submit">Submit</button>
       </form>
