prevent submit default

--- a/form.html
+++ b/form.html
@@ -10,7 +10,7 @@
   <body>
     <header class="header"><h1>Add Questions | Vietnam-Quiz</h1></header>
     <main class="form-main">
-      <form action="" class="form">
+      <form action="" class="form" data-js="form">
         <label for="your-question">Your question about Vietnam</label>
         <textarea
           name="your-question"
@@ -27,7 +27,9 @@
         ></textarea>
         <label for="your-tag">Your tag(s)</label>
         <input type="text" name="your-tag" />
-        <button type="submit">Submit</button>
+        <button type="submit" data-js="form-submit-button" class="submit-form">
+          Submit
+        </button>
       </form>
     </main>
     <footer class="footer">
@@ -66,5 +68,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/form.js"></script>
   </body>
 </html>
