create new question card from form data

--- a/form.html
+++ b/form.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="header"><h1>Add Questions | Vietnam-Quiz</h1></header>
-    <main class="form-main">
+    <main class="form-main" data-js="form-main">
       <form action="" class="form" data-js="form">
         <label for="your-question">Your question about Vietnam</label>
         <textarea
